db fixed